2011-08-07  Eric Wasylishen  <ewasylishen@gmail.com>

	* Tools/xpbs.m: Add some more comments

2011-08-07  Eric Wasylishen  <ewasylishen@gmail.com>

	* configure.ac: Test for Xfixes
	* configure: Regenerate
 	* config.h.in: Regenerate
	* Tools/xpbs.m: If Xfixes is available, use it to receive notifications when the
	owner of an X11 selection changes.

	In the future we should invalidate the list of cached pasteboard types when this
	happens, so, e.g. copying text from gnome-terminal, the general pasteboard will only
	have the text type, but subsequently copying text from OpenOffice.org, the general
	pasteboard will have plain text and RTF types (currently we don't do this, so
	you can't paste RTF contents unless it is in the clipboard when gpbs starts.)

	The above problem is also why DND from X to GNUstep doesn't work - the dragging
	pasteboard types are never updated.

2011-08-04  Eric Wasylishen  <ewasylishen@gmail.com>

	* Tools/xpbs.m: Get copy and paste of rich text from OpenOffice.org
	to Ink working.

	- OOo uses the MIME type "text/richtext", so make that another alias for RTF
	- Fix an obscure bug in measuring the size of the return buffer of
	XGetWindowProperty. When an array of Atom's is returned xlib will claim
	that they are 32-bit when in fact they may be 64-bit. This was causing
	xpbs to miss half of the available types for a clipboard on 64-bit systems.
	- Don't use 'True' for the delete paramater of XGetWindowProperty. I'm not sure
	why we were deleting window properties before. gtk doesn't do that.

2011-08-01  Eric Wasylishen  <ewasylishen@gmail.com>

	* configure.ac: Add a configure test for Xcursor
	* configure: regenerate
	* config.h.in: regernate

2011-07-30  Eric Wasylishen  <ewasylishen@gmail.com>
	* Source/win32/WIN32Server.m (-resolutionForScreen:):
	Scale the result by 0.75 so the Windows default of 96 DPI is
	mapped to the GNUstep default of 72 DPI. While this sounds wrong,